# polymarketbot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/bot-infra/: AGENTS.md  Cargo.toml
crates/bot-infra/src/: claim.rs  claim_relayer.rs  config.rs  contracts.rs  db.rs  exchange.rs  lib.rs  market_data.rs  proxy.rs  reconcile.rs  signer.rs  ws.rs
crates/bot-infra/src/claim/: batch.rs  support.rs  tests.rs
crates/bot-infra/src/config/: crypto.rs  defaults.rs  load.rs  mod.rs  models.rs  tests.rs  validate.rs
crates/bot-infra/src/db/: AGENTS.md  auto_claim.rs  core.rs  mappers.rs  mod.rs  models.rs  orders.rs  risk.rs  runs.rs  trade_builder.rs  trade_flow.rs  trade_flow_auto_tune.rs  trade_flow_overlap.rs  trade_flow_price_boundary.rs  trade_flow_runtime_snapshots.rs  trade_flow_steps.rs  trades.rs
crates/bot-infra/src/db/trade_builder/: analysis.rs  avg_rebound_pairlock_rescue.rs  orders.rs  (+13 more)
crates/bot-infra/src/exchange/: clob.rs  data_api.rs  gamma.rs  http.rs  inventory_snapshot.rs  mod.rs  models.rs  order_egress.rs  parse.rs  tests.rs
crates/bot-runner/: AGENTS.md  Cargo.toml
crates/bot-runner/src/: dca.rs  lib.rs  main.rs  telegram_notification.rs
crates/bot-runner/src/dca/: part_000.rs  part_001.rs  part_002.rs
crates/bot-runner/src/lib_parts/: part_000.rs  part_001.rs  part_002.rs  part_003.rs  part_004.rs  part_005.rs  part_006.rs  part_007.rs  part_008.rs  part_009.rs  part_010.rs  part_011.rs  part_012.rs  part_013.rs  part_014.rs  part_015.rs  part_016.rs  part_017.rs  part_018.rs  part_019.rs  part_020.rs  part_021.rs  part_022.rs  part_025.rs  part_026.rs  part_027.rs  part_028.rs
crates/bot-runner/src/tests/: confirmation_gate.rs  cycle_window_focus.rs  dual_runtime.rs  flow_state_market_selection.rs  mod.rs  place_order_core.rs  place_order_entry_timing.rs  place_order_fast_sl_submit.rs  place_order_inventory.rs  place_order_live_gap_notifications.rs  place_order_notifications.rs  place_order_pair_lock.rs  place_order_ptb_stop_loss_bump.rs  place_order_retry.rs  price_integrity.rs  support.rs  telegram.rs  trade_flow_edge_conditions.rs  trigger_drawdown_ws.rs  trigger_price_modes.rs  ws_fast_path_selection.rs
crates/bot-runner/src/trade_builder/: AGENTS.md  action_place_order_identity.rs  action_place_order_initial_status.rs  action_place_order_payload_macros.rs  action_place_order_sizing.rs  action_place_order_source_trade.rs  action_place_order_stale_market.rs  action_place_order_upstream_error.rs  analysis_diagnostics.rs  analysis_official_pnl.rs  analysis_snapshot.rs  armed_ws_eval.rs  buy_fill_lock.rs  buy_guard_eval.rs  cancel_reconcile.rs  clob_order_warmup.rs  confidence_ladder.rs  confidence_ladder_loss_cap.rs  confidence_ladder_tests.rs  config_versioning.rs  dca_live.rs  decision_logs.rs  deferred_submit_events.rs  exit_fast_submit.rs  exit_fill_notification_context.rs  exit_ladders.rs  exit_math.rs  exit_retry.rs  exit_sibling_priority.rs  fill_backfill.rs  fill_finalize.rs  fill_finalize_ptb_stop_loss.rs  fill_resolution.rs  fill_sync_throttle.rs  fill_sync_timing.rs  guard_price.rs  guard_waiting.rs  guarded_buy_ws_eval.rs  inventory_observation_due_gate.rs  inventory_observation_terminal.rs  (+107 more)
crates/bot-runner/src/trade_flow/: cycle_window_timers.rs  deferred_once_lock.rs  housekeeping_slow_log.rs  housekeeping_timing.rs  missed_market_no_order_diagnosis.rs  missed_market_notifications.rs  missed_market_timeline.rs  mod.rs  overlap_audit.rs  repeat_step_input.rs  ws_fast_path.rs  ws_fast_path_price_to_beat.rs  ws_fast_path_refresh.rs  ws_fast_path_selection.rs
crates/mock-exchange/: AGENTS.md  Cargo.toml
crates/mock-exchange/src/: lib.rs
(+721 files in other folders)
