[workspace]
members = [
  "crates/bot-core",
  "crates/bot-infra",
  "crates/bot-runner",
  "crates/mock-exchange",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
axum = { version = "0.7", features = ["ws"] }
aes-gcm = "0.10"
ethers = { version = "2", default-features = false, features = ["abigen", "rustls"] }
parking_lot = "0.12"
rust_decimal = { version = "1", features = ["serde"] }
