[package]
name = "bot-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
uuid.workspace = true
async-trait.workspace = true
base64.workspace = true
aes-gcm.workspace = true
hmac.workspace = true
sha2.workspace = true
ethers.workspace = true
bot-core = { path = "../bot-core" }

[dev-dependencies]
mock-exchange = { path = "../mock-exchange" }
