[package]
name = "bot-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
base64.workspace = true
aes-gcm.workspace = true
ethers.workspace = true
bot-core = { path = "../bot-core" }
bot-infra = { path = "../bot-infra" }
