[package]
name = "bot-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
base64.workspace = true
aes-gcm.workspace = true
ethers.workspace = true
futures-util.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
rust_decimal.workspace = true
async-trait.workspace = true
bot-core = { path = "../bot-core" }
bot-infra = { path = "../bot-infra" }
